2005-10-11  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>
	
	* src/test_poly.c:
	* src/test_poly.h: Added to test polygon point reduction algorithm and others.
	* src/map_draw_gdk.c: Prepare for rectangle clipping.
	* src/map_math.c: Add Douglas-Peucker point simplification algorithm.  Add point distance from line function.  Add in/out/partial rect overlap function.

2005-10-10  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>

	* data/layers.xml:
	* src/map.c: Adjusting of zoom scales and styles.
	* src/dc.c: Properly insert LOD3 table.
	* src/import_tiger.c: Rivers only exist on LOD0.
	* src/main.h: Add constant for middle mouse button.
	* src/mainwindow.c: Make zoomscale widget instant.  Middle mouse button drags map regardless of tool.  Improvement of some web map URLs.
	* src/util.c: Add zoomscale utility functions.

2005-10-05  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>

	* src/map_math.c:
	* src/map_math.h: Added missing files.

2005-10-05  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>

	* src/map_hittest.c:
	* src/map_hittest.h: Added missing files.

2005-10-05  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>

	* src/import_tiger.c:
	* src/search_road.c:
	* src/db.c: Add level of detail concept.
	* src/mainwindow.c: Add zoomtool.
	* src/map_draw_gdk.c: 
	* src/map_draw_cairo.c: Calculate bounding box on load instead of draw.  Update to tile drawing.
	* src/map.c: Begin splitting this file up more.  Add lots more zoom levels.
	* src/scenemanager.c: Remove empty module init.
	* src/main.c: Don't need to init scenemanager module.

2005-10-01  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>

	* src/downloadmanager.c: Remove _ from public function _downloadmanager_new().
	* src/mainwindow.c: Set check on View/Fullscreen and View/Sidebar when state changes for reasons other than the user clicking the menu item.
	* src/map_history.c: Add some debug printing support.
	* src/searchwindow.c: Add a new history item when user selects a search result.