@@ -98,10 +98,10 @@ zoomlevel_t g_sZoomLevels[NUM_ZOOM_LEVELS] = {
 	{  3300000, UNIT_MILES, 5,	UNIT_KILOMETERS, 7, 	3, 2},	// 15
 	{  2750000, UNIT_MILES, 5,	UNIT_KILOMETERS, 7, 	3, 2},	// 16
 
-	{  2200000, UNIT_MILES, 8,	UNIT_KILOMETERS, 5, 	4, 1},	// *17
-	{  1832250, UNIT_MILES, 8,	UNIT_KILOMETERS, 5, 	4, 1},	// 18
-	{  1464500, UNIT_MILES, 8,	UNIT_KILOMETERS, 5, 	4, 1},	// 19
-	{  1100000, UNIT_MILES, 8,	UNIT_KILOMETERS, 5, 	4, 1},	// 20
+	{  2200000, UNIT_MILES,20,	UNIT_KILOMETERS,15, 	4, 1},	// *17
+	{  1832250, UNIT_MILES,20,	UNIT_KILOMETERS,15, 	4, 1},	// 18
+	{  1464500, UNIT_MILES,20,	UNIT_KILOMETERS,15, 	4, 1},	// 19
+	{  1100000, UNIT_MILES,20,	UNIT_KILOMETERS,15, 	4, 1},	// 20
 
 	{   729000, UNIT_MILES,10,	UNIT_KILOMETERS, 8, 	5, 1},	// *21
 	{   607500, UNIT_MILES,10,	UNIT_KILOMETERS, 8, 	5, 1},	// 22
